src/objects/WG_Error_Log__c.object
<CustomObject>
    <description>Custom WaterGrass object for logging errors.</description>
    <fields>
        <fullName>C_P_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The C&amp;P Data record which triggered this error when it was inserted.</description>
        <inlineHelpText>The C&amp;P Data record which triggered this error when it was inserted.</inlineHelpText>
        <label>C&amp;P Data</label>
        <referenceTo>CnP_PaaS_Bridge__CnPData__c</referenceTo>
        <relationshipLabel>WG_Error_Logs</relationshipLabel>
        <relationshipName>WG_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Code</fullName>
                </value>
                <value>
                    <fullName>Apex Profiling</fullName>
                </value>
                <value>
                    <fullName>Callout</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Details from the error from the SaveResult</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Id__c</fullName>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Error_Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Error_Level__c</fullName>
        <label>Error_Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>FINE</fullName>
                </value>
                <value>
                    <fullName>FINER</fullName>
                </value>
                <value>
                    <fullName>FINEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Import_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import Object</label>
        <referenceTo>ImportObject__c</referenceTo>
        <relationshipLabel>WG_Error_Logs</relationshipLabel>
        <relationshipName>WG_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matching_Record_ID__c</fullName>
        <label>Matching Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PossibleDupLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Possible Duplicate Lead identified by the Datacloud.DuplicateManagement and inserted because DuplicateHeader.AllowDuplicate is set to true.</description>
        <inlineHelpText>Possible Duplicate Lead identified by the Datacloud.DuplicateManagement and inserted because DuplicateHeader.AllowDuplicate is set to true.</inlineHelpText>
        <label>PossibleDupLead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>WG_Error_Logs</relationshipLabel>
        <relationshipName>WG_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>Error Status Code</description>
        <inlineHelpText>Error Status Code</inlineHelpText>
        <label>Status_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WG_Error_Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>Status_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{0000000}</displayFormat>
        <label>WG_Error_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WG_Error_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>